--- a/templates/tryit.html
+++ b/templates/tryit.html
@@ -19,7 +19,7 @@
       <form class="form" action="/model" method="post">
         <label for="link">Link to the photo on Juno website</label>
         <input name="link" type="text" />
-        <input type="submit" class="btn""></input>
+        <input type="submit" class="btn"></input>
       </form>
     </div>
   </body>
